--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.9.7",
+    "lucide-react": "^0.507.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -24,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "preline": "^3.0.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.9"
   }
 }
